--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "xyz",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/index.js",
     "prestart:dev": "npm run lint:js",
-    "start:dev": "nodemon app.js",
+    "start:dev": "nodemon src/index.js",
     "lint:js": "xo",
     "pretest": "npm run lint:js",
     "test": "ava"
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^1.2.0"
+    "koa": "^1.2.0",
+    "koa-logger": "^1.3.0",
+    "koa-router": "^5.4.0"
   },
   "devDependencies": {
     "ava": "^0.15.1",
@@ -25,8 +27,10 @@
   "xo": {
     "esnext": true,
     "space": 4,
-    "envs": ["node", "browser"],
-    "rules": {
-    }
+    "envs": [
+      "node",
+      "browser"
+    ],
+    "rules": {}
   }
 }
